version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Results/CompositeFailureResults/MaximumStrainSettings.rst.txt
.. vale off



:class:`MaximumStrainSettings`
==============================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Results.CompositeFailureResults.MaximumStrainSettings(internalObject: Ansys.Common.Interop.DSObjectsAuto.IDSCompositeFailureCriteriaAuto)

   Bases: :py:obj:`object`


   
   Defines the configuration for the Maximum Strain failure criterion for reinforced materials.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MaximumStrainSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Reset`
            - Resets the settings to their default values.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Active property.
          * - :py:attr:`~CompressiveLimitMaterialOneDirection`
            - Gets or sets the global compressive strain limit in the material 1 direction (eXc).
          * - :py:attr:`~CompressiveLimitMaterialThreeDirection`
            - Gets or sets the global compressive strain limit in the out-of-plane direction (eZc).
          * - :py:attr:`~CompressiveLimitMaterialTwoDirection`
            - Gets or sets the global compressive strain limit in the material 2 direction (eYc).
          * - :py:attr:`~EvaluateMaterialOneDirectionFailure`
            - Gets or sets whether the failure criterion is evaluated in the material 1
          * - :py:attr:`~EvaluateMaterialThreeDirectionFailure`
            - Gets or sets whether the failure criterion is evaluated in the out-of-plane
          * - :py:attr:`~EvaluateMaterialTwoDirectionFailure`
            - Gets or sets whether the failure criterion is evaluated in the material 2
          * - :py:attr:`~EvaluateShearOneThreeFailure`
            - Gets or sets whether failure is evaluated for the out-of-plane shear e13. The corresponding failure
          * - :py:attr:`~EvaluateShearOneTwoFailure`
            - Gets or sets whether failure is evaluated for the in-plane shear e12. The corresponding failure
          * - :py:attr:`~EvaluateShearTwoThreeFailure`
            - Gets or sets whether failure is evaluated for the out-of-plane shear e23. The corresponding failure
          * - :py:attr:`~MaterialOneDirectionFailureWeightingFactor`
            - Gets or sets the weighting factor for the failure criterion in the material 1 direction.
          * - :py:attr:`~MaterialThreeDirectionFailureWeightingFactor`
            - Gets or sets the weighting factor for the failure criterion in the out-of-plane direction.
          * - :py:attr:`~MaterialTwoDirectionFailureWeightingFactor`
            - Gets or sets the weighting factor for the failure criterion in the material 2 direction.
          * - :py:attr:`~OverrideMaterial`
            - Gets or sets whether the global strain limits are used, overriding material-specific limits.
          * - :py:attr:`~ShearLimitOneThree`
            - Gets or sets the global out-of-plane shear strain limit (eSxz).
          * - :py:attr:`~ShearLimitOneTwo`
            - Gets or sets the global in-plane shear strain limit (eSxy).
          * - :py:attr:`~ShearLimitTwoThree`
            - Gets or sets the global out-of-plane shear strain limit (eSyz).
          * - :py:attr:`~ShearOneThreeFailureWeightingFactor`
            - Gets or sets the weighting factor for failure due to out-of-plane shear e13.
          * - :py:attr:`~ShearOneTwoFailureWeightingFactor`
            - Gets or sets the weighting factor for failure due to in-plane shear e12.
          * - :py:attr:`~ShearTwoThreeFailureWeightingFactor`
            - Gets or sets the weighting factor for failure due to out-of-plane shear e23.
          * - :py:attr:`~TensileLimitMaterialOneDirection`
            - Gets or sets the global tensile strain limit in the material 1 direction (eXt).
          * - :py:attr:`~TensileLimitMaterialThreeDirection`
            - Gets or sets the global tensile strain limit in the out-of-plane direction (eZt).
          * - :py:attr:`~TensileLimitMaterialTwoDirection`
            - Gets or sets the global tensile strain limit in the material 2 direction (eYt).







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Active property.
















   ..
       !! processed by numpydoc !!

.. py:property:: CompressiveLimitMaterialOneDirection
   :type: Optional[float]


   
   Gets or sets the global compressive strain limit in the material 1 direction (eXc).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: CompressiveLimitMaterialThreeDirection
   :type: Optional[float]


   
   Gets or sets the global compressive strain limit in the out-of-plane direction (eZc).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: CompressiveLimitMaterialTwoDirection
   :type: Optional[float]


   
   Gets or sets the global compressive strain limit in the material 2 direction (eYc).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMaterialOneDirectionFailure
   :type: Optional[bool]


   
   Gets or sets whether the failure criterion is evaluated in the material 1
       direction. The corresponding failure label is 'e1'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMaterialThreeDirectionFailure
   :type: Optional[bool]


   
   Gets or sets whether the failure criterion is evaluated in the out-of-plane
       direction. The corresponding failure label is 'e3'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateMaterialTwoDirectionFailure
   :type: Optional[bool]


   
   Gets or sets whether the failure criterion is evaluated in the material 2
       direction. The corresponding failure label is 'e2'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateShearOneThreeFailure
   :type: Optional[bool]


   
   Gets or sets whether failure is evaluated for the out-of-plane shear e13. The corresponding failure
       label is 'e13'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateShearOneTwoFailure
   :type: Optional[bool]


   
   Gets or sets whether failure is evaluated for the in-plane shear e12. The corresponding failure
       label is 'e12'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateShearTwoThreeFailure
   :type: Optional[bool]


   
   Gets or sets whether failure is evaluated for the out-of-plane shear e23. The corresponding failure
       label is 'e23'.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialOneDirectionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the failure criterion in the material 1 direction. 
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialThreeDirectionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the failure criterion in the out-of-plane direction. 
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialTwoDirectionFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the failure criterion in the material 2 direction. 
















   ..
       !! processed by numpydoc !!

.. py:property:: OverrideMaterial
   :type: Optional[bool]


   
   Gets or sets whether the global strain limits are used, overriding material-specific limits.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearLimitOneThree
   :type: Optional[float]


   
   Gets or sets the global out-of-plane shear strain limit (eSxz).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearLimitOneTwo
   :type: Optional[float]


   
   Gets or sets the global in-plane shear strain limit (eSxy).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearLimitTwoThree
   :type: Optional[float]


   
   Gets or sets the global out-of-plane shear strain limit (eSyz).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearOneThreeFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for failure due to out-of-plane shear e13.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearOneTwoFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for failure due to in-plane shear e12.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShearTwoThreeFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for failure due to out-of-plane shear e23.
















   ..
       !! processed by numpydoc !!

.. py:property:: TensileLimitMaterialOneDirection
   :type: Optional[float]


   
   Gets or sets the global tensile strain limit in the material 1 direction (eXt).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: TensileLimitMaterialThreeDirection
   :type: Optional[float]


   
   Gets or sets the global tensile strain limit in the out-of-plane direction (eZt).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!

.. py:property:: TensileLimitMaterialTwoDirection
   :type: Optional[float]


   
   Gets or sets the global tensile strain limit in the material 2 direction (eYt).
       Only used if OverrideMaterial is true.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Reset() -> None

   
   Resets the settings to their default values.

   ..
       !! processed by numpydoc !!



.. vale on